--- a/needle_planner/package.xml
+++ b/needle_planner/package.xml
@@ -9,6 +9,9 @@
 
   <depend>needle_planner_msgs</depend>
   <depend>rclpy</depend>
+  
+  <exec_depend>python-sklearn</exec_depend>
+  <exec_depend>python-model_v4</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
